2012-10-07 Roman
- TFunction: valAtt() and valDet() is made virtual. Public attribute "exCtx" for execution context store here.
- !!:DAQ.JavaLikeCalc: Registers RegW execution context moved out each execution turn, and next execution
    performance rised from 5% to 10%.
- Protocol.HTTP: File /robots.txt processing is added for prevent scan by seach engines.
- FIX:Transport.Serial: New flow control mode "rs485" some fixed for SER_RS485_ENABLED miss processing.


2012-10-03 Roman
- SYS: Function TSYS::sysTm() is added for allow fast access to time from periodic updated global memory cell.
    Used for DAQ.JavaLikeCalc execution time limit control.
- !!:DAQ.JavaLikeCalc: Time limit processing is made more optimal for time, from 5% to 12% JavaLike code execution faster.
    Exception generation enabled on execution time limit exceed.
- FIX:Archive: Single value, typical for 1h, request is fixed.
- FIX:UI.Vision, UI.WebVision: Periods values processing for hours more is fixed.


2012-09-26 Roman
- SYS: Build "openscada-dbg" Debian package is added to rules by Alexey Bondarchuk(aleax) initiative.
- DAQ.SMH2Gi: Set inputs to EVAL is added on error requests. Inputs read before outputs send is made.


2012-09-24 Roman
- FIX:Transport.Serial: Resource embracing expand to full TTrOut::start() function for prevent posible crash on
    multiply requests from different threads.
- !!!:DAQ.SMH2Gi: New module version 0.5.0 for deep integration to Segnetics SMH2Gi hardware.
    Shared memory for communication to SMLogics and devices on MR/MC bus protocol is realized.
- !:DAQ: Parameters loading is moved straight to function load_(), from enable().
    To parameter type object TTipParam() bind functions from object TParamContr() is added:
    enable(), disable(), vlGet(), vlSet(), vlArchMake() and cntrCmdProc().
- DAQ.=Tmpl=: Significant updated.
- FIX:DAQ.Comedy: Control interface's type "int" is fixed to "dec".